@@ -9,25 +9,22 @@ import com.profroid.profroidapp.customersubdomain.dataAccessLayer.CustomerIdenti
 import com.profroid.profroidapp.utils.exceptions.InvalidIdentifierException;
 import com.profroid.profroidapp.utils.exceptions.InvalidOperationException;
 import com.profroid.profroidapp.utils.exceptions.ResourceNotFoundException;
-
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
 
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -39,21 +36,24 @@ public class CellarControllerUnitTest {
     @Mock
     private CellarService cellarService;
 
-    private final String VALID_CELLAR_ID = "c1234567-abcd-4f42-9911-abcdef123456";
-    private final String VALID_CUSTOMER_ID = "cust1234-abcd-4f42-9911-abcdef123456";
-    private final String INVALID_CELLAR_ID = "invalid-id";
-    private final String NON_EXISTING_CELLAR_ID = "00000000-abcd-4f42-9999-abcdef999999";
+    @Mock
+    private Authentication authentication;
+
+    private static final String VALID_CELLAR_ID = "c1234567-abcd-4f42-9911-abcdef123456";
+    private static final String VALID_CUSTOMER_ID = "123e4567-e89b-12d3-a456-426614174000";
+    private static final String VALID_USER_ID = "123e4567-e89b-12d3-a456-426614174111";
+
+    private static final String INVALID_CELLAR_ID = "invalid-id";
+    private static final String NON_EXISTING_CELLAR_ID = "00000000-abcd-4f42-9999-abcdef999999";
 
     private CellarRequestModel validCellarRequest;
     private CellarResponseModel validCellarResponse;
 
     @BeforeEach
     void setUp() {
-        CustomerIdentifier customerIdentifier = new CustomerIdentifier(VALID_CUSTOMER_ID);
-
         // Request
         validCellarRequest = new CellarRequestModel();
-        validCellarRequest.setOwnerCustomerId(customerIdentifier);
+        validCellarRequest.setOwnerCustomerId(new CustomerIdentifier(VALID_CUSTOMER_ID));
         validCellarRequest.setName("Wine Cellar");
         validCellarRequest.setHeight(2.5);
         validCellarRequest.setWidth(3.0);
@@ -86,37 +86,61 @@ public class CellarControllerUnitTest {
     // ============================================================
 
     @Test
-    void whenGetAllCellars_withExistingCellars_thenReturnCellarList() {
-        List<CellarResponseModel> expectedList =
-                Arrays.asList(validCellarResponse, validCellarResponse);
+    void whenGetAllCellars_withOwnerCustomerId_thenReturnFilteredList() {
+        List<CellarResponseModel> expectedList = Arrays.asList(validCellarResponse, validCellarResponse);
 
-        when(cellarService.getAllCellars())
-                .thenReturn(expectedList);
+        when(cellarService.getAllCellars(VALID_CUSTOMER_ID)).thenReturn(expectedList);
 
         ResponseEntity<List<CellarResponseModel>> response =
-                cellarController.getAllCellars();
+                cellarController.getAllCellars(VALID_CUSTOMER_ID, authentication);
 
         assertNotNull(response);
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertNotNull(response.getBody());
         assertEquals(2, response.getBody().size());
 
-        verify(cellarService, times(1)).getAllCellars();
+        verify(cellarService, times(1)).getAllCellars(VALID_CUSTOMER_ID);
+        verify(cellarService, never()).getAllCellarsForUser(anyString());
+        verifyNoInteractions(authentication);
     }
 
     @Test
-    void whenGetAllCellars_withNoCellars_thenReturnEmptyList() {
-        when(cellarService.getAllCellars())
-                .thenReturn(Collections.emptyList());
+    void whenGetAllCellars_withBlankOwnerCustomerId_thenDeriveFromAuthenticationAndReturnUserCellars() {
+        when(authentication.getName()).thenReturn(VALID_USER_ID);
+
+        List<CellarResponseModel> expectedList = List.of(validCellarResponse);
+        when(cellarService.getAllCellarsForUser(VALID_USER_ID)).thenReturn(expectedList);
 
         ResponseEntity<List<CellarResponseModel>> response =
-                cellarController.getAllCellars();
+                cellarController.getAllCellars("   ", authentication);
 
         assertNotNull(response);
         assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
+        assertEquals(1, response.getBody().size());
+
+        verify(cellarService, times(1)).getAllCellarsForUser(VALID_USER_ID);
+        verify(cellarService, never()).getAllCellars(anyString());
+        verify(authentication, times(2)).getName();
+    }
+
+    @Test
+    void whenGetAllCellars_withNullOwnerCustomerId_thenDeriveFromAuthenticationAndReturnUserCellars() {
+        when(authentication.getName()).thenReturn(VALID_USER_ID);
+
+        when(cellarService.getAllCellarsForUser(VALID_USER_ID)).thenReturn(Collections.emptyList());
+
+        ResponseEntity<List<CellarResponseModel>> response =
+                cellarController.getAllCellars(null, authentication);
+
+        assertNotNull(response);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
         assertTrue(response.getBody().isEmpty());
 
-        verify(cellarService, times(1)).getAllCellars();
+        verify(cellarService, times(1)).getAllCellarsForUser(VALID_USER_ID);
+        verify(cellarService, never()).getAllCellars(anyString());
+        verify(authentication, times(2)).getName();
     }
 
     // ============================================================
@@ -124,18 +148,35 @@ public class CellarControllerUnitTest {
     // ============================================================
 
     @Test
-    void whenGetCellarById_withValidId_thenReturnCellar() {
-        when(cellarService.getCellarById(VALID_CELLAR_ID))
-                .thenReturn(validCellarResponse);
+    void whenGetCellarById_withoutOwnerCustomerId_thenReturnCellar() {
+        when(cellarService.getCellarById(VALID_CELLAR_ID)).thenReturn(validCellarResponse);
 
         ResponseEntity<CellarResponseModel> response =
-                cellarController.getCellarById(VALID_CELLAR_ID);
+                cellarController.getCellarById(VALID_CELLAR_ID, null);
 
         assertNotNull(response);
         assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
         assertEquals(VALID_CELLAR_ID, response.getBody().getCellarId());
 
         verify(cellarService, times(1)).getCellarById(VALID_CELLAR_ID);
+        verify(cellarService, never()).getCellarById(anyString(), anyString());
+    }
+
+    @Test
+    void whenGetCellarById_withOwnerCustomerId_thenReturnOwnedCellar() {
+        when(cellarService.getCellarById(VALID_CUSTOMER_ID, VALID_CELLAR_ID)).thenReturn(validCellarResponse);
+
+        ResponseEntity<CellarResponseModel> response =
+                cellarController.getCellarById(VALID_CELLAR_ID, VALID_CUSTOMER_ID);
+
+        assertNotNull(response);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
+        assertEquals(VALID_CELLAR_ID, response.getBody().getCellarId());
+
+        verify(cellarService, times(1)).getCellarById(VALID_CUSTOMER_ID, VALID_CELLAR_ID);
+        verify(cellarService, never()).getCellarById(anyString());
     }
 
     @Test
@@ -144,7 +185,7 @@ public class CellarControllerUnitTest {
                 .thenThrow(new ResourceNotFoundException("Cellar not found"));
 
         assertThrows(ResourceNotFoundException.class,
-                () -> cellarController.getCellarById(NON_EXISTING_CELLAR_ID));
+                () -> cellarController.getCellarById(NON_EXISTING_CELLAR_ID, null));
 
         verify(cellarService, times(1)).getCellarById(NON_EXISTING_CELLAR_ID);
     }
@@ -155,7 +196,7 @@ public class CellarControllerUnitTest {
                 .thenThrow(new InvalidIdentifierException("Invalid ID"));
 
         assertThrows(InvalidIdentifierException.class,
-                () -> cellarController.getCellarById(INVALID_CELLAR_ID));
+                () -> cellarController.getCellarById(INVALID_CELLAR_ID, null));
 
         verify(cellarService, times(1)).getCellarById(INVALID_CELLAR_ID);
     }
@@ -174,6 +215,7 @@ public class CellarControllerUnitTest {
 
         assertNotNull(response);
         assertEquals(HttpStatus.CREATED, response.getStatusCode());
+        assertNotNull(response.getBody());
         assertEquals("Wine Cellar", response.getBody().getName());
 
         verify(cellarService, times(1))
@@ -200,6 +242,7 @@ public class CellarControllerUnitTest {
                 .name("Commercial Cellar")
                 .cellarType(CellarType.COMMERCIAL)
                 .bottleCapacity(500)
+                .isActive(true)
                 .build();
 
         when(cellarService.createCellar(eq(VALID_CUSTOMER_ID), any(CellarRequestModel.class)))
@@ -209,6 +252,7 @@ public class CellarControllerUnitTest {
                 cellarController.createCellar(commercialRequest);
 
         assertEquals(HttpStatus.CREATED, response.getStatusCode());
+        assertNotNull(response.getBody());
         assertEquals(CellarType.COMMERCIAL, response.getBody().getCellarType());
 
         verify(cellarService, times(1))
@@ -239,6 +283,7 @@ public class CellarControllerUnitTest {
                 .name("Updated Cellar")
                 .height(3.0)
                 .bottleCapacity(200)
+                .isActive(true)
                 .build();
 
         when(cellarService.updateCellar(eq(VALID_CUSTOMER_ID), eq(VALID_CELLAR_ID), any(CellarRequestModel.class)))
@@ -248,6 +293,7 @@ public class CellarControllerUnitTest {
                 cellarController.updateCellar(VALID_CELLAR_ID, updateRequest);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
         assertEquals("Updated Cellar", response.getBody().getName());
 
         verify(cellarService, times(1))
@@ -259,8 +305,11 @@ public class CellarControllerUnitTest {
         when(cellarService.updateCellar(eq(VALID_CUSTOMER_ID), eq(NON_EXISTING_CELLAR_ID), any()))
                 .thenThrow(new ResourceNotFoundException("Cellar not found"));
 
+        CellarRequestModel request = new CellarRequestModel();
+        request.setOwnerCustomerId(new CustomerIdentifier(VALID_CUSTOMER_ID));
+
         assertThrows(ResourceNotFoundException.class,
-                () -> cellarController.updateCellar(NON_EXISTING_CELLAR_ID, validCellarRequest));
+                () -> cellarController.updateCellar(NON_EXISTING_CELLAR_ID, request));
 
         verify(cellarService, times(1))
                 .updateCellar(eq(VALID_CUSTOMER_ID), eq(NON_EXISTING_CELLAR_ID), any());
@@ -271,8 +320,11 @@ public class CellarControllerUnitTest {
         when(cellarService.updateCellar(eq(VALID_CUSTOMER_ID), eq(INVALID_CELLAR_ID), any()))
                 .thenThrow(new InvalidIdentifierException("Invalid ID"));
 
+        CellarRequestModel request = new CellarRequestModel();
+        request.setOwnerCustomerId(new CustomerIdentifier(VALID_CUSTOMER_ID));
+
         assertThrows(InvalidIdentifierException.class,
-                () -> cellarController.updateCellar(INVALID_CELLAR_ID, validCellarRequest));
+                () -> cellarController.updateCellar(INVALID_CELLAR_ID, request));
 
         verify(cellarService, times(1))
                 .updateCellar(eq(VALID_CUSTOMER_ID), eq(INVALID_CELLAR_ID), any());
@@ -290,14 +342,14 @@ public class CellarControllerUnitTest {
                 .isActive(false)
                 .build();
 
-        when(cellarService.deactivateCellar(VALID_CELLAR_ID))
-                .thenReturn(deactivatedResponse);
+        when(cellarService.deactivateCellar(VALID_CELLAR_ID)).thenReturn(deactivatedResponse);
 
         ResponseEntity<CellarResponseModel> response =
                 cellarController.deactivateCellar(VALID_CELLAR_ID);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertNotNull(response.getBody());
+        assertFalse(response.getBody().isActive());
 
         verify(cellarService, times(1)).deactivateCellar(VALID_CELLAR_ID);
     }
@@ -347,14 +399,14 @@ public class CellarControllerUnitTest {
                 .isActive(true)
                 .build();
 
-        when(cellarService.reactivateCellar(VALID_CELLAR_ID))
-                .thenReturn(reactivatedResponse);
+        when(cellarService.reactivateCellar(VALID_CELLAR_ID)).thenReturn(reactivatedResponse);
 
         ResponseEntity<CellarResponseModel> response =
                 cellarController.reactivateCellar(VALID_CELLAR_ID);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertNotNull(response.getBody());
+        assertTrue(response.getBody().isActive());
 
         verify(cellarService, times(1)).reactivateCellar(VALID_CELLAR_ID);
     }
